test/positive/feature_primitivecasts.java

public class feature_primitivecasts {
  public feature_primitivecasts() {}
  public int m(byte x) {
    return (int)x;
  }
}
