test/negative/feature_bitshift.java

public class feature_bitshift {
  public feature_bitshift() {}
  public int m(int x) {
    return return ((x << 2) >> 3) >>> 4;
  }
}

